@@ -501,6 +501,9 @@
 <MODE NAME="sas"		FILE="sas.xml"
 				FILE_NAME_GLOB="*.sas" />
 
+<MODE NAME="scala"  	FILE="scala.xml"
+    			FILE_NAME_GLOB="*.scala" />				
+				
 <MODE NAME="scheme"		FILE="scheme.xml"
 				FILE_NAME_GLOB="*.scm" />
 
